--- a/public/css/mainstyle.css
+++ b/public/css/mainstyle.css
@@ -199,7 +199,10 @@ nav.navbar{
 /* bodims post section styles */
 
 .bodim{
-    margin-top: 40px !important;
+    margin-top: 150px !important;
+    /* margin-left: 70px;
+    margin-right: 70px;
+    margin-bottom: 70px; */
 }
 .bodimps{
     
@@ -226,8 +229,149 @@ nav.navbar{
     color: #000000;
 }
 .grid{
-    margin-bottom: 20px !important;
+    /* margin-bottom: 20px !important; */
 }
+
+/* -------------boarding seemore section----------------- */
+
+.viewsection{
+    margin-top: 150px !important;
+}
+
+/* -------end---------- */
+
+
+/* -------Image Slider important styls------ */
+.flickity-enabled {
+    position: relative;
+  }
+  
+  .flickity-enabled:focus { outline: none; }
+  
+  .flickity-viewport {
+    overflow: hidden;
+    position: relative;
+    height: 100%;
+  }
+  
+  .flickity-slider {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+  }
+  
+  /* draggable */
+  
+  .flickity-enabled.is-draggable {
+    -webkit-tap-highlight-color: transparent;
+            tap-highlight-color: transparent;
+    -webkit-user-select: none;
+       -moz-user-select: none;
+        -ms-user-select: none;
+            user-select: none;
+  }
+  
+  .flickity-enabled.is-draggable .flickity-viewport {
+    cursor: move;
+    cursor: -webkit-grab;
+    cursor: grab;
+  }
+  
+  .flickity-enabled.is-draggable .flickity-viewport.is-pointer-down {
+    cursor: -webkit-grabbing;
+    cursor: grabbing;
+  }
+  
+  /* ---- previous/next buttons ---- */
+  
+  .flickity-prev-next-button {
+    position: absolute;
+    top: 50%;
+    width: 44px;
+    height: 44px;
+    border: none;
+    border-radius: 50%;
+    background: rgba(255, 255, 255, 0.404);
+    background: hsla(0, 0%, 100%, 0.75);
+    cursor: pointer;
+    /* vertically center */
+    -webkit-transform: translateY(-50%);
+            transform: translateY(-50%);
+  }
+  
+  .flickity-prev-next-button:hover { background: white; }
+  
+  .flickity-prev-next-button:focus {
+    outline: none;
+    box-shadow: 0 0 0 5px #09F;
+  }
+  
+  .flickity-prev-next-button:active {
+    opacity: 0.6;
+  }
+  
+  .flickity-prev-next-button.previous { left: 10px; }
+  .flickity-prev-next-button.next { right: 10px; }
+  
+  
+  .flickity-prev-next-button:disabled {
+    opacity: 0.3;
+    cursor: auto;
+  }
+  
+  .flickity-prev-next-button svg {
+    position: absolute;
+    left: 20%;
+    top: 20%;
+    width: 60%;
+    height: 60%;
+  }
+  
+  .flickity-prev-next-button .arrow {
+    fill: rgba(51, 51, 51, 0.678);
+  }
+  
+  
+  
+  * { box-sizing: border-box; }
+  
+  body { font-family: sans-serif; }
+  
+  .carousel {
+    background: #FAFAFA;
+  }
+  
+  .carousel-main {
+    margin-bottom: 8px;
+  }
+  
+  .carousel-cell  {
+    width: 100%;
+    height: 504px;
+    margin-right: 8px;
+    background: #8C8 ;
+    border-radius: 5px;
+    /* counter-increment: carousel-cell; */
+  }
+  
+
+  
+  .carousel-nav .carousel-cell {
+    height: 90px;
+    width: 120px;
+  }
+  
+  
+  /* Atelierbram edit */
+  /* .carousel-main img {
+    display: block;
+    margin: 0 auto; 
+  }
+  
+  .containerx {
+    max-width: 672px;
+    margin: 0 auto;
+  } */
 
 
 /*footer sections styles*/
