Add Boarding modification and half of boarding request add functiion related work

--- a/public/css/mainstyle.css
+++ b/public/css/mainstyle.css
@@ -360,6 +360,10 @@ nav.navbar{
     height: 90px;
     width: 120px;
   }
+  .customerpno{
+    display: none;
+    margin-bottom: 10px;
+}
   
   
   /* Atelierbram edit */
