--- a/public/css/mainstyle.css
+++ b/public/css/mainstyle.css
@@ -108,12 +108,12 @@ nav.navbar{
     background-color:  #ffffff;
     padding-top: 8%; 
 }
-.regis{ 
-    /* background-color:  #e7dddd;  */
+/* .regis{ 
+    background-color:  #e7dddd; 
 }
 .regis-body{
     
-}
+} */
 .regis .regis-page{ 
     background-color:#ececec;
     margin-top: 2%;
@@ -204,9 +204,9 @@ nav.navbar{
     margin-right: 70px;
     margin-bottom: 70px; */
 }
-.bodimps{
+/* .bodimps{
     
-}
+} */
 .post{
     padding: 50px 50px 50px 50px ;
     background-image: radial-gradient(circle, #e3dede, #e9e6e7, #efedef, #f6f5f6, #fdfdfd);
@@ -228,9 +228,9 @@ nav.navbar{
 .dets{
     color: #000000;
 }
-.grid{
-    /* margin-bottom: 20px !important; */
-}
+/* .grid{
+    margin-bottom: 20px !important;
+} */
 
 /* -------------boarding seemore section----------------- */
 
@@ -376,6 +376,60 @@ nav.navbar{
     max-width: 672px;
     margin: 0 auto;
   } */
+
+
+  /* mycard styles coustom design */
+  .btnajestment{
+    margin-left: 2%;
+    margin-right: 1%;
+  }
+  .mycbulmacard{
+    padding-left: 8%;
+    padding-right: 8%;
+    padding-top: 4%;
+  }
+  .mycardbody{
+    padding-left: 8%;
+  }
+  .mycard {
+    background: #fff;
+    border-radius: 8px;
+    display: inline-block;
+    height: 550px;
+    margin: 1rem;
+    position: relative;
+    width: 400px;
+    padding-top: 1%;
+    
+  }
+  
+  .mycard-1 {
+    box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+    transition: all 0.3s cubic-bezier(.25,.8,.25,1);
+  }
+  
+  .mycard-1:hover {
+    box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
+  }
+  
+  .mycard-2 {
+    box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
+  }
+  
+  .mycard-3 {
+    box-shadow: 0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
+  }
+  
+  .mycard-4 {
+    box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
+  }
+  
+  .mycard-5 {
+    box-shadow: 0 19px 38px rgba(0,0,0,0.30), 0 15px 12px rgba(0,0,0,0.22);
+  }
+
+   /* mycard styles coustom design end */
+  
 
 
 /*footer sections styles*/
