higher rating post and top add function implimented

--- a/public/css/mainstyle.css
+++ b/public/css/mainstyle.css
@@ -407,6 +407,9 @@ nav.navbar{
     display: none;
     margin-bottom: 10px;
 }
+  .hrline{
+    background-color: #000;
+  }
   
   
   /* Atelierbram edit */
@@ -470,6 +473,7 @@ nav.navbar{
   .mycard-5 {
     box-shadow: 0 19px 38px rgba(0,0,0,0.30), 0 15px 12px rgba(0,0,0,0.22);
   }
+
 
    /* mycard styles coustom design end */
   
