--- a/public/css/mainstyle.css
+++ b/public/css/mainstyle.css
@@ -474,6 +474,34 @@ nav.navbar{
     box-shadow: 0 19px 38px rgba(0,0,0,0.30), 0 15px 12px rgba(0,0,0,0.22);
   }
 
+  .StripeElement {
+    box-sizing: border-box;
+    
+    height: 40px;
+    
+    padding: 10px 12px;
+    
+    border: 1px solid transparent;
+    border-radius: 4px;
+    background-color: white;
+    
+    box-shadow: 0 1px 3px 0 #e6ebf1;
+    -webkit-transition: box-shadow 150ms ease;
+    transition: box-shadow 150ms ease;
+}
+
+  .StripeElement--focus {
+      box-shadow: 0 1px 3px 0 #cfd7df;
+  }
+
+  .StripeElement--invalid {
+      border-color: #fa755a;
+  }
+
+  .StripeElement--webkit-autofill {
+      background-color: #fefde5 !important;
+  }
+
 
    /* mycard styles coustom design end */
   
